--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ allprojects {
     repositories {
         jcenter()
     }
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = 1.7
+        targetCompatibility = 1.7
+    }
 }
 
 task clean(type: Delete) {
